--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -7,6 +7,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: pnpm/action-setup@v4
+      with:
+        version: 9.15.3
       - name: Install Node.js with pnpm
         uses: actions/setup-node@v4
         with:
