--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -5,20 +5,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v4
 
       - name: Install Node.js with pnpm
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "pnpm"
-      - run: pnpm install
+      - run: npm install
 
       - uses: mymindstorm/setup-emsdk@v14
         with:
           version: 3.1.74
 
-      - run: pnpm build
+      - run: npm build
 
 #      - uses: JS-DevTools/npm-publish@v1
 #        with:
