--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: 20
           cache: "pnpm"
-      - run: npm install
+      - run: pnpm install
 
       - uses: mymindstorm/setup-emsdk@v14
         with:
@@ -20,6 +20,6 @@ jobs:
 
       - run: npm build
 
-#      - uses: JS-DevTools/npm-publish@v1
-#        with:
-#          token: ${{ secrets.NPM_TOKEN }}
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
