--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           version: 3.1.74
 
-      - run: npm build
+      - run: pnpm build
 
       - uses: JS-DevTools/npm-publish@v1
         with:
