--- a/package.json
+++ b/package.json
@@ -10,26 +10,21 @@
   },
   "devDependencies": {
     "@supercharge/promise-pool": "^3.1.1",
-    "@tlaplus/tree-sitter-tlaplus": "^1.2.4",
-    "@tree-sitter-grammars/tree-sitter-toml": "^0.7.0",
-    "@tree-sitter-grammars/tree-sitter-yaml": "^0.7.0",
-    "@tree-sitter-grammars/tree-sitter-zig": "^1.0.0",
     "@types/find-root": "^1.1.4",
     "@types/node": "^20.11.17",
     "find-root": "^1.1.0",
+    "tree-sitter": "^0.22.4",
     "tree-sitter-agda": "^1.3.1",
     "tree-sitter-bash": "^0.23.3",
     "tree-sitter-c": "^0.23.4",
     "tree-sitter-c-sharp": "^0.23.1",
-    "tree-sitter-cli": "^0.24.6",
+    "tree-sitter-cli": "^0.24.7",
     "tree-sitter-clojure": "github:sogaiu/tree-sitter-clojure#f4236d4da8aa92bc105d9c118746474c608e6af7",
     "tree-sitter-cpp": "^0.23.4",
     "tree-sitter-css": "^0.23.1",
     "tree-sitter-dart": "github:UserNobody14/tree-sitter-dart#e81af6ab94a728ed99c30083be72d88e6d56cf9e",
-    "tree-sitter-elisp": "^1.5.0",
     "tree-sitter-elixir": "github:elixir-lang/tree-sitter-elixir#b20eaa75565243c50be5e35e253d8beb58f45d56",
     "tree-sitter-elm": "github:elm-tooling/tree-sitter-elm#e34bdc5c512918628b05b48e633f711123204e45",
-    "tree-sitter-embedded-template": "^0.23.2",
     "tree-sitter-gdscript": "github:PrestonKnopp/tree-sitter-gdscript#48b49330888a4669b48619b211cc8da573827725",
     "tree-sitter-gleam": "github:gleam-lang/tree-sitter-gleam#066704e4826699e754d351e3bbe12bf2e51de9d8",
     "tree-sitter-go": "^0.23.4",
@@ -45,29 +40,26 @@
     "tree-sitter-lua": "^2.1.3",
     "tree-sitter-markdown": "github:tree-sitter-grammars/tree-sitter-markdown#192407ab5a24bfc24f13332979b5e7967518754a",
     "tree-sitter-nix": "github:nix-community/tree-sitter-nix#21897cc3dcd15325303e46b85295b743742af6ab",
-    "tree-sitter-objc": "^3.0.2",
-    "tree-sitter-ocaml": "^0.23.2",
     "tree-sitter-perl": "github:tree-sitter-perl/tree-sitter-perl#b467c41aed6e52c7f581c18a3b50821995a82c95",
     "tree-sitter-php": "^0.23.11",
     "tree-sitter-python": "^0.23.6",
-    "tree-sitter-ql": "github:tree-sitter/tree-sitter-ql#1fd627a4e8bff8c24c11987474bd33112bead857",
     "tree-sitter-query": "github:tree-sitter-grammars/tree-sitter-query#a6674e279b14958625d7a530cabe06119c7a1532",
-    "tree-sitter-rescript": "github:rescript-lang/tree-sitter-rescript#4606cd81c4c31d1d02390fee530858323410a74c",
-    "tree-sitter-r": "github:r-lib/tree-sitter-r#a0d3e3307489c3ca54da8c7b5b4e0c5f5fd6953a",
     "tree-sitter-ruby": "^0.23.1",
     "tree-sitter-rust": "^0.23.2",
     "tree-sitter-scala": "^0.23.4",
     "tree-sitter-scss": "github:tree-sitter-grammars/tree-sitter-scss#00a4cd98d5fc71aa5a55174e7ed5e34c9cc85a87",
-    "tree-sitter-solidity": "github:JoranHonig/tree-sitter-solidity#f7f5251a3f5b1d04f0799b3571b12918af177fc8",
     "tree-sitter-sparql": "github:IoannisNezis/tree-sitter-sparql#3c468620e7c2ffa69441de60161c4e4a919969f7",   
     "tree-sitter-swift": "^0.6.0",
-    "tree-sitter-systemrdl": "^0.8.0",
     "tree-sitter-talon": "github:wenkokke/tree-sitter-talon#7119d7f3fefd0b0c7e900120b51f85a23e6c3160",
     "tree-sitter-typescript": "^0.23.2",
-    "tree-sitter-vue": "github.com/ikatyang/tree-sitter-vue#efd20240618d5c1b03ad0d5eac341202196f282d",
     "tree-sitter-xml": "github:tree-sitter-grammars/tree-sitter-xml#ce150c5be7f617e18ffa2064213e5d9c4cb5d69e",
     "ts-node": "^10.9.2",
-    "typescript": "5.7.3"
+    "typescript": "^5.7.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+        "tree-sitter-cli"
+    ]
   },
   "files": [
     "/out"
@@ -75,8 +67,7 @@
   "packageManager": "pnpm@10.0.0",
   "main": "bindings/node",
   "dependencies": {
-    "tree-sitter-wasms": "^0.1.11",
     "tree-sitter": "^0.22.4",
-    "tree-sitter-cli": "^0.24.6"
+    "tree-sitter-cli": "^0.24.7"
   }
 }
