--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -6,19 +6,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: pnpm/action-setup@v2
-      - name: Install Node.js with pnpm
-        uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10.0.0
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "pnpm"
-      - run: npm install
+      - run: pnpm install
 
-      - uses: mymindstorm/setup-emsdk@v11
+      - uses: mymindstorm/setup-emsdk@v14
         with:
-          version: 2.0.24
+          version: 3.1.74
 
-      - run: npm build
+      - run: pnpm build
 
       - uses: JS-DevTools/npm-publish@v1
         with:
