--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "tree-sitter-wasms",
+  "name": "@cursorless/tree-sitter-wasms",
   "version": "0.2.0",
   "description": "Prebuilt WASM binaries for tree-sitter's language parsers.",
-  "repository": "https://github.com/Gregoor/tree-sitter-wasms",
-  "author": "Gregor <gregorwbr@gmail.com>, Menci <huanghaorui301@gmail.com>",
+  "repository": "https://github.com/cursorless-dev/tree-sitter-wasms",
+  "author": "Gregor <gregorwbr@gmail.com>, Menci <huanghaorui301@gmail.com>, rinOfTheStars ",
   "license": "Unlicense",
   "scripts": {
     "build": "ts-node build.ts"
