Hash-lock all cloned-from-git packages
Also updated tree-sitter-agda and tree-sitter-elixir versions

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/node": "^20.11.17",
     "find-root": "^1.1.0",
     "tree-sitter": "^0.22.4",
-    "tree-sitter-agda": "^1.3.1",
+    "tree-sitter-agda": "github:tree-sitter/tree-sitter-agda#47802091de0cb8ac2533d67ac37e65692c5902c4",
     "tree-sitter-bash": "^0.23.3",
     "tree-sitter-c": "^0.23.4",
     "tree-sitter-c-sharp": "^0.23.1",
@@ -23,7 +23,7 @@
     "tree-sitter-cpp": "^0.23.4",
     "tree-sitter-css": "^0.23.1",
     "tree-sitter-dart": "github:UserNobody14/tree-sitter-dart#e81af6ab94a728ed99c30083be72d88e6d56cf9e",
-    "tree-sitter-elixir": "github:elixir-lang/tree-sitter-elixir#b20eaa75565243c50be5e35e253d8beb58f45d56",
+    "tree-sitter-elixir": "github:elixir-lang/tree-sitter-elixir#02a6f7fd4be28dd94ee4dd2ca19cb777053ea74e",
     "tree-sitter-elm": "github:elm-tooling/tree-sitter-elm#e34bdc5c512918628b05b48e633f711123204e45",
     "tree-sitter-gdscript": "github:PrestonKnopp/tree-sitter-gdscript#48b49330888a4669b48619b211cc8da573827725",
     "tree-sitter-gleam": "github:gleam-lang/tree-sitter-gleam#066704e4826699e754d351e3bbe12bf2e51de9d8",
