--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/find-root": "^1.1.4",
     "@types/node": "^20.11.17",
     "find-root": "^1.1.0",
-    "tree-sitter-agda": "github:pokey/tree-sitter-agda#e5fba6cabe8c7fc7993ced2b86704f3841215284",
+    "tree-sitter-agda": "github:tree-sitter/tree-sitter-agda#47802091de0cb8ac2533d67ac37e65692c5902c4",
     "tree-sitter-bash": "github:tree-sitter/tree-sitter-bash#2fbd860f802802ca76a6661ce025b3a3bca2d3ed",
     "tree-sitter-c-sharp": "^0.19.0",
     "tree-sitter-c": "github:tree-sitter/tree-sitter-c#deca017a554045b4c203e7ddff39ae64ff05e071",
