--- a/package.json
+++ b/package.json
@@ -65,8 +65,9 @@
     "tree-sitter-yaml": "github:tree-sitter-grammars/tree-sitter-yaml#7b03feefd36b5f155465ca736c6304aca983b267",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "tree-sitter-cli": "^0.22.6",
-    "tree-sitter": "^0.21.1"
+    "tree-sitter-cli": "^0.22.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "tree-sitter": "^0.21.1"
+  }
 }
