--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tree-sitter-bash": "github:tree-sitter/tree-sitter-bash#2fbd860f802802ca76a6661ce025b3a3bca2d3ed",
     "tree-sitter-c-sharp": "^0.19.0",
     "tree-sitter-c": "github:tree-sitter/tree-sitter-c#deca017a554045b4c203e7ddff39ae64ff05e071",
+    "tree-sitter-cli": "^0.24.7",
     "tree-sitter-clojure": "github:sogaiu/tree-sitter-clojure#f4236d4da8aa92bc105d9c118746474c608e6af7",
     "tree-sitter-cpp": "github:tree-sitter/tree-sitter-cpp#9d412ba7e597fe158f209da33e60f31b1f0df967",
     "tree-sitter-css": "^0.19.0",
@@ -63,11 +64,9 @@
     "tree-sitter-typescript": "github:tree-sitter/tree-sitter-typescript#4ad3010c91d700026d036b5230e2d99ba94ae8a4",
     "tree-sitter-xml": "github:tree-sitter-grammars/tree-sitter-xml#648183d86f6f8ffb240ea11b4c6873f6f45d8b67",
     "tree-sitter-yaml": "github:tree-sitter-grammars/tree-sitter-yaml#7b03feefd36b5f155465ca736c6304aca983b267",
+    "tree-sitter": "^0.21.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3",
-    "tree-sitter-cli": "^0.22.6"
+    "typescript": "^5.7.3"
   },
-  "dependencies": {
-    "tree-sitter": "^0.21.1"
-  }
+  "dependencies": {}
 }
