--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "ts-node build.ts"
   },
   "devDependencies": {
-    "@elm-tooling/tree-sitter-elm": "github:elm-tooling/tree-sitter-elm#0aecfbf69f0c9bcdfada0f6f2c5398235c23949f",
+    "@elm-tooling/tree-sitter-elm": "^5.7.0",
     "@supercharge/promise-pool": "^3.1.1",
     "@types/find-root": "^1.1.4",
     "@types/node": "^20.14.0",
