--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,13 +28,8 @@ jobs:
         with:
           version: 3.1.74
 
-      # - name: Install dependencies
-      #   run: pnpm --color install
-
       - name: Install dependencies
-        run: pnpm install --reporter=ndjson
-        env:
-          NODE_DEBUG: node-gyp
+        run: pnpm --color install
 
       - name: Build
         run: pnpm build
