--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,6 +33,16 @@ jobs:
       - name: Build
         run: pnpm build
 
+      - name: Read version from package.json
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "version=$VERSION" >> $GITHUB_ENV
+
+      - name: Create Git tag
+        run: |
+          git tag ${{ env.version }}
+          git push origin ${{ env.version }}
+
       - name: Publish to NPM
         uses: JS-DevTools/npm-publish@v3
         with:
